# ComfyUI-Qwen-TTS-Eng

./: .gitignore  README.md  README_CN.md  __init__.py  download_models.py  nodes.py  pyproject.toml  train.py
doc/: troubleshooting.md
example/: Custom Save Voice.json  Model Fine-Tuning and Workflow Usage.json  Multi-character dialogue EN.json  example.json
qwen_tts/cli/: demo.py
