[project]
name = "qwen3-tts-comfyui-eng"  # Unique identifier (immutable after creation)
description = "ComfyUI custom nodes for speech synthesis, voice cloning, and voice design based on Qwen3-TTS"
version = "1.0.7"  # Semantic versioning
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
dependencies = [
    "torch",
    "torchaudio",
    "transformers>=4.57.0,<5.0.0",
    "librosa",
    "soundfile",
    "accelerate",
    "numpy",
    "einops",
    "tiktoken",
    "sentencepiece"
]

[project.urls]
Repository = "https://github.com/vinhnxv/ComfyUI-Qwen-TTS-Eng"

[tool.comfy]
PublisherId = "vinhnxv"  # TODO: Fill in your Publisher ID from https://registry.comfy.org
DisplayName = "Qwen3-TTS - Voice Synthesis & Cloning"
Icon = "https://raw.githubusercontent.com/vinhnxv/ComfyUI-Qwen-TTS-Eng/main/example/qwen3-tts.png"
